--- a/bin/guidedrubric/guidedrubric/static/html/guidedrubric.html
+++ b/bin/guidedrubric/guidedrubric/static/html/guidedrubric.html
@@ -1,5 +1,18 @@
-<div class="guidedrubric_block">
-<p>GuidedRubricXBlock: count is now
-    <span class='count'>{self.count}</span> (click me to increment).
-</p>
+<h1>Guided Critical Analysis</h1>
+<p>In this guided article review, we'll both read the same journal article. Then, you'll be guided through an analysis of the paper. Let's begin by reading the paper!</p>
+<a href="http://up.csail.mit.edu/other-pubs/las2014-pguo-engagement.pdf">View PDF</a>
+<p>This is a **DEMO**</p>
+<div class="chatgpt_wrapper">
+    <div class="chatgpt_block">
+        <div class="chatbox">
+            <div id="chat-logs">
+                <p class="questions">What is your name?</p>
+            </div>
+            <div class="chat-input">
+                <span id="error-msg"></span>
+                <textarea id="chat-msg" placeholder="Enter Prompt ... " rows="5" cols="230"></textarea>
+                <button id="send-btn">send</button>
+            </div>
+        </div>
+    </div>
 </div>
