--- a/guidedrubric/static/html/guidedrubric.html
+++ b/guidedrubric/static/html/guidedrubric.html
@@ -11,7 +11,8 @@
             <div class="chat-input">
                 <span id="error-msg"></span>
                 <textarea id="chat-msg" placeholder="Enter Prompt ... " rows="5" cols="230"></textarea>
-                <button id="send-btn">send</button>
+                <button id="send-btn">Submit</button>
+                <button id="skip-btn">Skip Question</button>
             </div>
         </div>
     </div>
