--- a/guidedrubric/static/html/lms.html
+++ b/guidedrubric/static/html/lms.html
@@ -21,7 +21,6 @@
 </div> {% endcomment %}
 
 <div class="gudied-critical-analysis-container">
-
         <div class="guided-critical-analysis-header">
             <h1>Guided Critical Analysis</h1>
             <p>In this guided article review, we'll both read the same journal article. Then, you'll be guided through
@@ -29,9 +28,16 @@
                 analysis of the paper. Let's begin by reading the paper!</p>
         </div>
         <div class="guided-critical-analysis-body">
+            {% if guided_rubric_xblock.zip_file %}
             <div class="micro-ai-btn-primary"> <a
-                    href="http://up.csail.mit.edu/other-pubs/las2014-pguo-engagement.pdf"><button>View PDF</button></a>
+                    href="{{ window.location.origin }}/media/{{ guided_rubric_xblock.zip_file }}" target="_blank"><button>View PDF</button></a>
             </div>
+            {% else %}
+            <div class="micro-ai-btn-primary"> <a
+                    href="http://up.csail.mit.edu/other-pubs/las2014-pguo-engagement.pdf" target="_blank"><button>View PDF</button></a>
+            </div>
+            {% endif %}
+            
             <div class="demo-text">
                 <p>This is a <span>DEMO</span>, so sample answers are <span> pre-filled </span></p>
             </div>
