--- a/guidedrubric/static/html/lms.html
+++ b/guidedrubric/static/html/lms.html
@@ -6,7 +6,7 @@
     <div class="chatgpt_block">
         <div class="chatbox">
             <div id="chat-logs">
-                <p class="questions">{{ guided_rubric_xblock.get_next_question }}</p>
+                <p class="questions">{{ next_question }}</p>
             </div>
             <div class="chat-input">
                 <span id="error-msg"></span>
