User input validation and skip question functionality

--- a/guidedrubric/static/html/lms.html
+++ b/guidedrubric/static/html/lms.html
@@ -100,12 +100,12 @@
 
 
                         </div>
-                        <div class="chat-input" style="display: block;" id="prompt-with-checkbox">
+                        <!-- <div class="chat-input" style="display: block;" id="prompt-with-checkbox">
                             <img src="https://i.ibb.co/zmpCtwF/checkicon.png"><span id="error-msg"></span>
                             <textarea id="chat-msg" placeholder="Enter Prompt ... " rows="24" cols="230"></textarea>
 
 
-                        </div>
+                        </div> -->
                         <div class="micro-ai-btn-primary micro-ai-btn-container"><button id="send-btn">{{button_label}}</button>
                             <button id="skip-btn" class="btn-ghost">Skip Question</button>
                         </div>
