--- a/guidedrubric/static/html/lms.html
+++ b/guidedrubric/static/html/lms.html
@@ -90,6 +90,17 @@
             <div class="chatgpt_wrapper">
                 <div class="chatgpt_block">
                     <div class="chatbox">
+                        {% for phase_id, response in user_response_details.items %}
+                            <div id="chat-history">
+                                <p class="questions">{{ response.question }}</p>
+                            </div>
+
+                            <div class="chat-input" style="display: block;" id="prompt-with-loader">
+                                <textarea rows="24" cols="230">{{ response.response.user_response }}</textarea>
+                            </div>
+                            <div class="ai-msg">{{ response.response.ai_response }}</div>
+                        {% endfor %}
+
                         <div id="chat-logs">
                             <p class="questions">{{ next_question }}</p>
                         </div>
