Implemented logic to handle max_tokens_per_user and completion_token

--- a/guidedrubric/static/html/lms.html
+++ b/guidedrubric/static/html/lms.html
@@ -5,6 +5,9 @@
 <div class="chatgpt_wrapper">
     <div class="chatgpt_block">
         <div class="chatbox">
+        <h1>here</h1>
+        <input type="hidden" id="completion_token" value="{{guided_rubric_xblock.completion_token}} ">
+        <input type="hidden" id="max_tokens_per_user" value="{{guided_rubric_xblock.max_tokens_per_user}} ">
             <!-- <div id="chat-logs">
                 <p class="questions">{{ next_question }}</p>
             </div> -->
