--- a/guidedrubric/static/html/lms.html
+++ b/guidedrubric/static/html/lms.html
@@ -6,6 +6,7 @@
     <div class="chatgpt_block">
         <div class="chatbox">
         <h1>here</h1>
+        <input type="hidden" id="is_staff" value="{{is_user_staff}}">
         <input type="hidden" id="completion_token" value="{{guided_rubric_xblock.completion_token}} ">
         <input type="hidden" id="max_tokens_per_user" value="{{guided_rubric_xblock.max_tokens_per_user}} ">
             <!-- <div id="chat-logs">
