--- a/guidedrubric/static/html/studio.html
+++ b/guidedrubric/static/html/studio.html
@@ -62,6 +62,14 @@
         
         <li class="field comp-setting-entry is-set">
             <div class="wrapper-comp-setting">
+                <label class="label setting-label" for="completion_token">{% trans field_completion_token.display_name %}</label>
+                <input class="input setting-input" name="completion_token" id="completion_token" value="{{ guided_rubric_xblock.completion_token }}" type="text" />
+            </div>
+            <span class="tip setting-help">{% trans field_completion_token.help %}</span>
+        </li>
+        
+        <li class="field comp-setting-entry is-set">
+            <div class="wrapper-comp-setting">
                 <label class="label setting-label" for="completion_message">{% trans field_completion_message.display_name %}</label>
                 <input class="input setting-input" name="completion_message" id="completion_message" value="{{ guided_rubric_xblock.completion_message }}" type="text" />
             </div>
