Fixed streaming response

--- a/guidedrubric/static/html/lms.html
+++ b/guidedrubric/static/html/lms.html
@@ -135,8 +135,9 @@
 
                             <div class="chat-input" style="display: block;" id="prompt-with-loader">
                                 <div id ="chat_input_loader" class="lds-dual-ring" style="display:none"></div><span id="error-msg"></span>
-                                <textarea id="chat-msg" placeholder="Enter Prompt ... " rows="24" cols="230"></textarea>
+                                <textarea id="chat-msg"  placeholder="Enter Prompt ... " rows="24" cols="230"></textarea>
                             </div>
+                            <div id="ai-msg" class="ai-msg recent-ai-msg"></div>
                         {% endif %}
                         <!-- <div class="chat-input" style="display: block;" id="prompt-with-checkbox">
                             <img src="https://i.ibb.co/zmpCtwF/checkicon.png"><span id="error-msg"></span>
