Handled chat history for wrong answer

--- a/guidedrubric/static/html/lms.html
+++ b/guidedrubric/static/html/lms.html
@@ -118,7 +118,7 @@
                             </div>
                             
                             
-                            <div class="chat-input" style="display: block;" id="prompt-with-loader">
+                            <div class="chat-input" style="display: block;" id="prompt-with-loader-{{phase_id}}">
                                 <textarea id="chat-msg-{{phase_id}}" rows="24" cols="230">{{ response.response.user_response }}</textarea>
                             </div>
                             <div id="ai-msg-{{ phase_id }}" class="ai-msg">{{ response.response.ai_response }}</div>
