--- a/guidedrubric/static/html/lms.html
+++ b/guidedrubric/static/html/lms.html
@@ -97,9 +97,20 @@
                         <input type="hidden" id="last_attempted_phase_id" value="{{ last_attempted_phase_id }}"></input>
                         <input type="hidden" id="is_last_phase_successful" value="{{ is_last_phase_successful }}"></input>
                         <div id="chatbox-history">
-                        {% for phase_id, response in user_response_details.items %}
+                            {% if is_initial_phase %}
+                            <div id="chat-logs">
+                                <p class="questions">{{ next_question }}</p>
+                            </div>
 
-                        {% if phase_id == last_attempted_phase_id and not is_last_phase_successful %}
+                            <div class="chat-input" style="display: block;" id="prompt-with-loader">
+                                <div id ="chat_input_loader" class="lds-dual-ring" style="display:none"></div><span id="error-msg"></span>
+                                <textarea id="chat-msg"  placeholder="Enter Prompt ... " rows="24" cols="230"></textarea>
+                            </div>
+                            <div id="ai-msg" class="ai-msg recent-ai-msg"></div>
+                            {% else %}
+                            {% for phase_id, response in user_response_details.items %}
+                                
+                            {% if phase_id == last_attempted_phase_id and not is_last_phase_successful %}
                                 <div id="chat-logs">
                                     <p class="questions">{{ next_question }}</p>
                                 </div>
@@ -126,22 +137,19 @@
                         {% endif %}
 
                         {% endfor %}
+                        <div id="chat-logs">
+                            <p class="questions">{{ next_question }}</p>
+                        </div>
+
+                        <div class="chat-input" style="display: block;" id="prompt-with-loader">
+                            <div id ="chat_input_loader" class="lds-dual-ring" style="display:none"></div><span id="error-msg"></span>
+                            <textarea id="chat-msg"  placeholder="Enter Prompt ... " rows="24" cols="230"></textarea>
+                        </div>
+                        <div id="ai-msg" class="ai-msg recent-ai-msg"></div>
+                        {% endif %}
 
 
                         </div>
-                        
-                        {% if is_last_phase_successful or last_attempted_phase_id == 1 %}
-
-                            <div id="chat-logs">
-                                <p class="questions">{{ next_question }}</p>
-                            </div>
-
-                            <div class="chat-input" style="display: block;" id="prompt-with-loader">
-                                <div id ="chat_input_loader" class="lds-dual-ring" style="display:none"></div><span id="error-msg"></span>
-                                <textarea id="chat-msg"  placeholder="Enter Prompt ... " rows="24" cols="230"></textarea>
-                            </div>
-                            <div id="ai-msg" class="ai-msg recent-ai-msg"></div>
-                        {% endif %}
                         <!-- <div class="chat-input" style="display: block;" id="prompt-with-checkbox">
                             <img src="https://i.ibb.co/zmpCtwF/checkicon.png"><span id="error-msg"></span>
                             <textarea id="chat-msg" placeholder="Enter Prompt ... " rows="24" cols="230"></textarea>
