Eliminated the condition to create file again in assistant if previously uploaded Renamed fields and values as required

--- a/guidedrubric/static/html/studio.html
+++ b/guidedrubric/static/html/studio.html
@@ -50,7 +50,7 @@
 
         <li class="field comp-setting-entry is-set">
             <div class="wrapper-comp-setting">
-                <label class="label setting-label" for="knowledge_base">{% trans "Upload .zip package" %}</label>
+                <label class="label setting-label" for="knowledge_base">{% trans "Knowledge Base" %}</label>
                 <input class="input setting-input" name="knowledge_base" id="knowledge_base" type="file" accept="application/zip" />
             </div>
 
