--- a/guidedrubric/static/html/studio.html
+++ b/guidedrubric/static/html/studio.html
@@ -43,7 +43,7 @@
         <li class="field comp-setting-entry is-set">
             <div class="wrapper-comp-setting">
                 <label class="label setting-label" for="assistant_model">{% trans field_assistant_model.display_name %}</label>
-                <input class="input setting-input" name="assistant_model" id="assistant_model" value="{{ guided_rubric_xblock.assistant_model }}" type="text" disabled />
+                <input class="input setting-input" name="assistant_model" id="assistant_model" value="gpt-4-turbo-preview" type="text" disabled />
             </div>
             <span class="tip setting-help">{% trans field_assistant_model.help %}</span>
         </li>
