--- a/guidedrubric/static/html/lms.html
+++ b/guidedrubric/static/html/lms.html
@@ -13,8 +13,7 @@
             </div> -->
             <div class="chat-input">
                 <span id="error-msg"></span>
-                <label class="label setting-label">Last phase id</label>
-                <input id="last_attempted_phase_id" value="{{ guided_rubric_xblock.last_attempted_phase_id }}"></input>
+                <input type="hidden" id="last_attempted_phase_id" value="{{ guided_rubric_xblock.last_attempted_phase_id }}"></input>
                 <!-- <textarea id="chat-msg" placeholder="Enter Prompt ... " rows="5" cols="230"></textarea>
                 <button id="send-btn">Submit</button> -->
                 <!-- <button id="skip-btn">Skip Question</button>  -->
