--- a/guidedrubric/static/html/lms.html
+++ b/guidedrubric/static/html/lms.html
@@ -99,7 +99,6 @@
                                     <div id ="chat_input_loader" class="lds-dual-ring" style="display:none"></div><span id="error-msg"></span>
                                     <textarea id="chat-msg"  placeholder="Enter Prompt ... " rows="24" cols="230"></textarea>
                                 </div>
-                                <div id="ai-msg" class="ai-msg recent-ai-msg"></div>
                             {% elif not is_initial_phase %}
                                 {% for phase_id, response in user_response_details.items %}
                                     {% if phase_id == last_attempted_phase_id and not is_last_phase_successful %}
@@ -123,8 +122,12 @@
                                             <div class="chat-input" style="display: block;" id="prompt-with-loader-{{phase_id}}">
                                                 <textarea id="chat-msg-{{phase_id}}" rows="24" cols="230">{{ response.response.user_response }}</textarea>
                                             </div>
-                                            <div id="ai-msg-{{ phase_id }}" class="ai-msg">{{ response.response.ai_response }}</div>
-
+                                            <div id="ai-msg-{{ phase_id }}" class="ai-msg recent-ai-msg">
+                                                <div class="icon-bar">
+                                                    🤖
+                                                </div>
+                                                <p>{{ response.response.ai_response }}</p>
+                                            </div>
                                     {% endif %}
                                 {% endfor %}
                             {% endif %}
@@ -138,7 +141,12 @@
                                     <div id ="chat_input_loader" class="lds-dual-ring" style="display:none"></div><span id="error-msg"></span>
                                     <textarea id="chat-msg"  placeholder="Enter Prompt ... " rows="24" cols="230"></textarea>
                                 </div>
-                                <div id="ai-msg" class="ai-msg recent-ai-msg"></div>
+                                <div id="ai-msg-{{ phase_id }}" class="ai-msg recent-ai-msg">
+                                    <div class="icon-bar">
+                                        🤖
+                                    </div>
+                                    <p>{{ response.response.ai_response }}</p>
+                                </div>
                                 
                             {% endif %}
 
